[package]
name = "RunnyPush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
percent-encoding = "2.3.1"
select = "0.6.0"
actix-web = "4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
